@@ -1,3 +1,5 @@
+17.nov (ws)
+      - fix another palette related crash
 16.nov (ws)
       - added galician translation from Xosé
       - fix crash when saving palettes
